Fix column alignment in the editor

--- a/projects/plugins/jetpack/extensions/blocks/dialogue/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/dialogue/style.scss
@@ -60,18 +60,16 @@
 
 			.wp-block-jetpack-dialogue__meta {
 				display: block;
-				align-items: initial;
 				flex: 0 0 25%;
+				text-align: right;
 			}
 
 			.wp-block-jetpack-dialogue__participant {
-				text-align: right;
 				margin-right: 12px;
 			}
 
 			.components-dropdown,
 			.wp-block-jetpack-dialogue__timestamp-dropdown {
-				text-align: right;
 				display: block;
 			}
 		}
